<resources>
    <string name="app_name">百格活动</string>
    <string name="home_title">我的活动</string>
    <string name="login_user_name"><font size="14">请输入账号</font></string>
    <string name="login_user_password"><font size="14">请输入密码</font></string>
    <string name="activity_start">活动正在进行</string>
    <string name="activity_start1">进行中</string>
    <string name="activity_not_start1">距活动开始还有</string>
    <string name="activity_not_start2">天</string>
    <string name="activity_finished">活动已结束</string>
    <string name="activity_ing">进行中的活动</string>
    <string name="no_activity_ing">暂无进行中的活动</string>
    <string name="no_activity_stop">暂无已结束的活动</string>
    <string name="activity_finished1">已结束的活动</string>
    <string name="start">开始</string>
    <string name="not_start">暂未开始</string>
    <string name="stop">已结束</string>
    <string name="stop_sale_ticket">暂停售票</string>
    <string name="not_start1">未开始</string>
    <string name="people_come">人来过</string>
    <string name="setting">设置</string>
    <string name="already_setting">已设置</string>
    <string name="participants">报名</string>
    <string name="income">收入</string>
    <string name="checkin">签到</string>
    <string name="confirm_checkin">确认签到</string>
    <string name="checkin_cancle">取消签到</string>
    <string name="modify_failed">签到失败</string>
    <string name="checkIn_success">签到成功</string>
    <string name="have_checkin">参会者已签到</string>
    <string name="error_barcode">该二维码不是正确的参会二维码</string>
    <string name="barcode_checkin">扫码签到</string>
    <string name="have_checkin1">已签到</string>
    <string name="no_checkin_num">未签到人数</string>
    <string name="have_checkin_num">已签到人数</string>
    <string name="hint_search_box"><font size="14">搜索</font></string>
    <string name="hint_search_collect"><font size="14">搜索</font></string>
    <string name="result_search_box">没有搜索结果哦~</string>
    <string name="free">Free</string>
    <string name="selled_fininsh">门票已售罄</string>
    <string name="add_people_success">添加参会人员成功</string>
    <string name="add_people_failed">添加参会人员失败</string>
    <string name="modify_people_err">修改失败</string>
    <string name="emai_err">邮箱格式错误</string>
    <string name="phone_err">请输入正确格式的手机号</string>
    <string name="phone_err1">请输入正确的手机号</string>
    <string name="phone_err2">手机格式不正确</string>
    <string name="phone_err4">手机格式有误</string>
    <string name="input_phone">请输入手机号</string>
    <string name="none_people">暂无参会人员</string>
    <string name="edit_attendee">修改参会人员信息</string>
    <string name="add_to_contact">添加到联系人</string>
    <string name="drop_message">请确保信息填写完整</string>
    <string name="check_your_net">请检查网络是否可用</string>
    <string name="select_ticket">请选择门票</string>
    <string name="audit_refuse">审核拒绝</string>
    <string name="audit_refuse1">审核未通过</string>
    <string name="audit_tongguo">审核通过</string>
    <string name="audit_success">设置审核成功</string>
    <string name="audit_failed">审核失败</string>
    <string name="audit_wait">待审核</string>
    <string name="audit_wait1">等待审核</string>
    <string name="audit_wait_person">待审核人员</string>
    <string name="audit_wait_person1">待审核人员：</string>
    <string name="success_wait_confirm">成功待确认</string>
    <string name="unknown_state">未知状态</string>
    <string name="audit_wait_order">待审核订单</string>
    <string name="audit_wait_order1">待审核订单：</string>
    <string name="num_more">99+</string>
    <string name="already_checkin">已签到人员</string>
    <string name="no_checkin">未签到人员</string>
    <string name="no_order_record">未查询到订单记录</string>
    <string name="no_order">您还没有订单哦</string>
    <string name="activity_order">活动订单</string>
    <string name="btn_barcode_text"><font size="14">输入签到码或者手机号后四位</font></string>
    <string name="input_email"><font size="12">请输入邮箱</font></string>
    <string name="tishi">提示</string>
    <string name="exit">是否退出当前帐号？</string>
    <string name="ischeckin">是否签到</string>
    <string name="cancel">取消</string>
    <string name="autologin_exit">退出需要重新扫描登录</string>
    <string name="have_collect">已采集</string>
    <string name="collect_already_coming">您已经来过了</string>
    <string name="collect_welcome">采集成功</string>
    <string name="collect_info">信息收集</string>
    <string name="collect_out_in">进出控制</string>
    <string name="no_limit">无限制</string>
    <string name="none_collect_people">暂无采集人员</string>
    <string name="go">进</string>
    <string name="out1">出</string>
    <string name="scan_num">扫描数:</string>
    <string name="collect_people">采集人员</string>
    <string name="collect_time">采集时间</string>
    <string name="tv_mark1">用途：</string>
    <string name="tv_mark2">门票：</string>
    <string name="tv_mark3">商品：</string>
    <string name="information_collect">信息收集</string>
    <string name="input_phonenum"><font size="12">请输入手机号</font></string>
    <string name="get_identify_code"><font size="12">获取验证码</font></string>
    <string name="register_failed">注册失败</string>
    <string name="people_not_exist">参会者不存在</string>
    <string name="not_start_collect">尚未开始采集！</string>
    <string name="finish_collect">采集已结束</string>
    <string name="none_collect">暂无采集点</string>
    <string name="empty_barcode">输入必须四位以上(包含四位)</string>
    <string name="not_input_num">用户名只允许输入汉字或英文</string>
    <string name="info_not_complete">信息填写不完整</string>
    <string name="open_switch">开启在线控制需保持网络通畅</string>
    <string name="open_controll">开启在线控制</string>
    <string name="close_switch">请检查网络或关闭在线控制</string>
    <string name="name_password_null">用户名或密码为空</string>
    <string name="barcode_login">扫描登录</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="no_support"><font size="10">暂不支持</font></string>
    <string name="please_update">未同步到最新数据</string>
    <string name="none_ticket">暂无门票信息或检查网络配置</string>
    <string name="not_design_ticket">您不允许进入</string>
    <string name="add_on_site">现场添加</string>
    <string name="none_info">""</string>
    <string name="daochu_success">导出成功</string>
    <string name="please_input_eamil">请输入邮箱</string>
    <string name="hint_statistic_one"><font size="16">每日销售统计 </font></string>
    <string name="hint_statistic_two"><font size="16">每日报名统计 </font></string>
    <string name="hint_btn_statistic_one"><font size="10">每日销售统计 </font></string>
    <string name="hint_btn_statistic_two"><font size="10">每日报名统计 </font></string>
    <string name="hint_no_statistic_data">暂无统计数据</string>
    <string name="input_event_title">请填写活动名称</string>
    <string name="change_event_page">点击图片更改活动封面</string>
    <string name="time1">时间:</string>
    <string name="address">地点:</string>
    <string name="sponsor">主办方:</string>
    <string name="detail1">详情:</string>
    <string name="ticket">门票:</string>
    <string name="sign_up_set">报名设置:</string>
    <string name="event_title">活动名称</string>
    <string name="sponsor_title">主办方名称</string>
    <string name="event_location">具体地址</string>
    <string name="use_system_pic">使用系统图库</string>
    <string name="use_pic_from_camera">从相机中选择</string>
    <string name="pic_is_suit">图片只能为png、jpg或jpeg图片</string>
    <string name="net_err">网络连接错误</string>
    <string name="net_overtime">网络连接超时</string>
    <string name="ticket_name">门票名称</string>
    <string name="ticket_price">门票价格(￥)</string>
    <string name="ticket_count">门票数量</string>
    <string name="input"><font size="12">请输入</font></string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="event_time">请添加活动时间</string>
    <string name="event_address">请添加活动地址</string>
    <string name="event_sponsor">请添加主办方</string>
    <string name="event_ticket">请添加活动门票</string>
    <string name="event_form">请添加活动表单</string>
    <string name="event_detail">请添加活动详情</string>
    <string name="event_name">请添加活动名称</string>
    <string name="company">公司</string>
    <string name="personal">个人</string>
    <string name="position">职位</string>
    <string name="name">姓名</string>
    <string name="nickName">昵称</string>
    <string name="unPaid">未支付</string>
    <string name="paid">已支付</string>
    <string name="overtimeUnpaid">超时未支付</string>
    <string name="paying">正在付款</string>
    <string name="cancelPaid">已取消</string>
    <string name="offLinePay">线下支付</string>
    <string name="confirm">确认</string>
    <string name="confirm1">确  认</string>
    <string name="cancels">取消</string>
    <string name="retry">重试</string>
    <string name="download_fail_retry">下载失败是否重试？</string>
    <string name="download_finish">下载完成，点击安装</string>
    <string name="download_finish1">下载完成</string>
    <string name="downloading">正在下载中...</string>
    <string name="check_new_version">检测到新版本</string>
    <string name="download_progress">下载进度:%.2f%%/100%%</string>
    <string name="download_fail">下载失败</string>
    <string name="login_user_code">请输入验证码</string>
    <string name="updata_version">版本更新</string>
    <string name="one_hundred">100</string>
    <string name="download_start_num">0%</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attend_select_ticket">请选择门票</string>
    <string name="next_step">下一步</string>
    <string name="ticket_free">免费票</string>
    <string name="ticket_have">余票</string>
    <string name="ticket_advance">提前票</string>
    <string name="sure_add">确认添加</string>
    <string name="et_hint">请输入标签名称</string>
    <string name="btn_sure">确定</string>
    <string name="username">姓名</string>
    <string name="audit">审核人员</string>
    <string name="no_result">无结果</string>
    <string name="no_permmsion">未授权访问您的相机</string>
    <string name="no_dynamic">您的动态还在酝酿中哦~</string>
    <string name="tag">标签</string>
    <string name="tag_manage">标签管理</string>
    <string name="add_tag">新建标签</string>
    <string name="my_tag">我的标签</string>
    <string name="no_tag">暂无标签</string>
    <string name="set_tag">设置标签</string>
    <string name="filter">快速筛选(可多选)</string>
    <string name="tag_people">标签人员</string>
    <string name="tv_add_attendee">+ 添加人员</string>
    <string name="have_filter_tag">已选择筛选标签</string>
    <string name="error_add_tag">添加标签失败</string>
    <string name="error_change_tag">修改标签失败</string>
    <string name="error_delete_tag">删除标签失败</string>
    <string name="please_select_tag">请选择标签</string>
    <string name="select_tag">请选择标签</string>
    <string name="login_barcode">登录码</string>
    <string name="people">人</string>
    <string name="search_people">查找人员</string>
    <string name="attendee">参会人员</string>
    <string name="out_people">导出名单</string>
    <string name="rebuild">重置</string>
    <string name="like">赞</string>
    <string name="comment">评论</string>
    <string name="shiled">[已屏蔽]</string>
    <string name="shiled1">屏蔽</string>
    <string name="cancel_shiled">取消屏蔽</string>
    <string name="top">置顶</string>
    <string name="cancel_top">取消置顶</string>
    <string name="dynamic_detail">动态详情</string>
    <string name="reply">回复</string>
    <string name="order_id1">订单号&#160;&#160;</string>
    <string name="from_gallery">从相册中获取</string>
    <string name="tack_photo">拍照</string>
    <string name="add_remarks">添加备注</string>
    <string name="sms">短信</string>
    <string name="sms_pay">短信充值</string>
    <string name="invite_email">邮件邀请</string>
    <string name="wechat">微信</string>
    <string name="export">导出</string>
    <string name="click_retry">点击重试</string>
    <string name="choose_provinces">请选择省市</string>
    <string name="detaile_address_hint">请输入详细地址</string>
    <string name="back_ticket">退票</string>
    <string name="order_product">订购产品  </string>
    <string name="money">金额&#160;&#160;</string>
    <string name="yuan">元</string>
    <string name="return_home">返回首页</string>
    <string name="change_order_info">修改订单信息</string>
</resources>