<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <item
        android:id="@+id/menu_modify_orderinfo"
        android:icon="@drawable/attendee_changeinfo"
        android:title="@string/change_order_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_quit_ticket"
        android:icon="@drawable/tuipiao"
        android:title="@string/back_ticket"
        app:showAsAction="never"
        android:visible="true"/>

    <item
        android:id="@+id/menu_add_remark"
        android:icon="@drawable/beizhu"
        android:title="@string/add_remarks"
        app:showAsAction="never"
        android:visible="false"/>

</menu>