<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_bottom_layout"
    android:layout_width="match_parent"
    android:layout_height="142dip"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_reply"
        android:layout_width="match_parent"
        android:layout_height="47dip"
        android:gravity="center"
        android:text="@string/reply"
        android:textColor="#202020" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e5e5e5" />

    <TextView
        android:id="@+id/tv_shield"
        android:layout_width="match_parent"
        android:layout_height="47dip"
        android:gravity="center"
        android:text="@string/shiled1"
        android:textColor="#202020" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="47dip"
        android:background="#e4e4e4"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#555" />
</com.zhy.autolayout.AutoLinearLayout>