<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dip"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="114dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_invite_sms"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_invite_sms"
            android:drawablePadding="4dip"
            android:gravity="center_horizontal"
            android:text="@string/sms"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_invite_email"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_invite_email"
            android:drawablePadding="4dip"
            android:gravity="center_horizontal"
            android:text="@string/invite_email"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_invite_weichat"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_invite_weichat"
            android:drawablePadding="4dip"
            android:gravity="center_horizontal"
            android:text="@string/wechat"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="46dip"
        android:background="#e4e4e4"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#555555" />
</com.zhy.autolayout.AutoLinearLayout>