<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28px"
        android:text= "@string/tishi"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28px"
        android:text= "@string/autologin_exit"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ced3d8"
        android:layout_marginTop="30px"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_auto_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textSize="36px"
            android:gravity="center"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ced3d8"/>
        <TextView
            android:id="@+id/tv_auto_confirm"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:textSize="36px"
            android:gravity="center"/>
    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>