<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_title"/>

    <ImageView
        android:id="@+id/iv_recharge_status"
        android:layout_width="429px"
        android:layout_height="87px"
        android:src="@drawable/chenggong"
        android:layout_gravity="center"
        android:layout_marginTop="41dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ededed"
        android:layout_marginTop="38dp"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id1"
            android:textColor="#898989"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/tv_order_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="14dp"/>

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_product"
            android:textColor="#898989"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/tv_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_pay"
            android:textColor="@color/black"
            android:textSize="14dp"/>

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textColor="#898989"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/tv_paynum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:textColor="@color/black"
            android:textSize="14dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yuan"
            android:textSize="14dp"
            android:textColor="@color/black"/>

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="37dp">

        <TextView
            android:id="@+id/btn_retry"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:text="@string/click_retry"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/bg_text_organge"/>

        <View
            android:layout_width="19dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/btn_return_home"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:text="@string/return_home"
            android:textColor="#ff9000"
            android:gravity="center"
            android:background="@drawable/bg_text_white"/>

    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>