<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="142dip"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:id="@+id/tv_from_album"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/from_gallery"
        android:gravity="center"
        android:textColor="#202020"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFDDDDDD"/>
    <TextView
        android:id="@+id/tv_take_photo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/tack_photo"
        android:gravity="center"
        android:textColor="#202020"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFDDDDDD"/>
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/cancel"
        android:gravity="center" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFDDDDDD"/>
</com.zhy.autolayout.AutoLinearLayout>