<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title"/>

    <TextView
        android:id="@+id/tv_select_address"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        android:hint="@string/choose_provinces"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e5e5e5"/>

    <com.xw.repo.XEditText
        android:id="@+id/et_detail_address"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        android:hint="@string/detaile_address_hint"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_confirm_address"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ff9000"
        android:gravity="center"
        android:text="@string/confirm1"
        android:textColor="@color/white"/>

</com.zhy.autolayout.AutoLinearLayout>