<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="20px"
        android:layout_weight="0.7">

        <TextView
            android:id="@+id/tv_manager_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20px"
            android:layout_marginTop="20px"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_mark1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_manager_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20px"
            android:layout_marginTop="20px"
            android:text="@string/tv_mark1"
            android:textColor="@color/ced3d8"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_manager_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_mark1"
            android:layout_toEndOf="@+id/tv_mark1"
            android:text="@string/information_collect"
            android:textColor="@color/ced3d8"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_mark2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_mark1"
            android:layout_alignStart="@+id/tv_mark1"
            android:layout_marginTop="20px"
            android:text="@string/tv_mark2"
            android:textColor="@color/ced3d8"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_manager_ticketname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_mark2"
            android:layout_toEndOf="@+id/tv_mark2"
            android:text="@string/no_limit"
            android:textColor="@color/ced3d8"
            android:textSize="14sp" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3">

        <TextView
            android:id="@+id/tv_manager_state"
            android:layout_width="60dip"
            android:layout_height="48px"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:background="@drawable/text_border_orange"
            android:gravity="center"
            android:text="@string/not_start1"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/ll_manager_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_manager_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/fe6900"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/people_come"
                android:textColor="@color/ced3d8"
                android:textSize="12sp" />

        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoRelativeLayout>

</com.zhy.autolayout.AutoLinearLayout>